Changelog
=========

10.2-dev - (unreleased)
-----------------------
* Change: fullscreen button help text now spans over entire button
  [ichimdav refs #20461]
* Change: added styling for noPageBreak on TinyMCE body
  [ichimdav 20461]
* Pre-upgrade step: The upgrade step for eea.design should be the first thing
  that needs to be done as soon as the instances are restarted to avoid
  having missing or broken styles.
  Use www8 instance to run upgrade from www/portal_setup/manage_upgrades
  [ichimdav refs #17336]
* Change: Add space after ul within #content-core
  [voineali refs #20457]
* Change: reorganized resources within skins folders
  [ichimdav refs #17336]
* Bug fix: fixed checkpermission import under folder_listing.pt
  [ghicaale]
* Feature: timeout dialog will appear after 15 minutes if the document is not saved.
  [ghicaale refs #20389]
* Change: removed state "closed" from the list of states marked with "draft" background
  [ghicaale refs #20490]
* Feature: added "draft" watermark for all non-final-published states
  [ghicaale refs #18538]
* Feature: blocked collective.deletepermission profile not to be installed
  (by mistake) via site setup
  [ghicaale refs #17478]
* Change: removed block_ldapuserfolder_profile.js as I registered new
  handlers to block un-wanted profiles
  [ghicaale refs #17478]
* Upgrade step: under /www/portal_javascripts/manage_jsForm remove block_ldapuserfolder_profile.js
  [ghicaale refs #17478]

10.1 - (2014-07-16)
-------------------
* Feature: show inactive content in folder_listing if user
  has 'Access inactive portal content' permission.
  [ghicaale refs #17865]

10.0 - (2014-07-15)
-------------------
* Feature: allow editor to exclude page parts from PDF generation via
  a special style in tinymce.
  Upgrade step: Plone > Site setup > TinyMCE >
  In styles add line "Exclude from PDF|span|excludeFromPDF"
  [demarant #20255]
* Bug fix: fixed icons placement for icons of soer2015 section navigation
  [ichimdav refs #19875]