@@ -45,8 +45,8 @@ class SubFolderView(BrowserView):
         return self.context.getFolderContents()
 
 
-    def folder_contents(self, size_limit = 10, folderContents = None,
-                                                     obj_link = None):
+    def folder_contents(self, size_limit=10, folderContents=None,
+                        obj_link=None, include_excluded_objects=None):
         """ Get the folderish items in cachable list/dict format
         """
         size_limit = int(self.request.get('size_limit', size_limit))
@@ -71,7 +71,7 @@ class SubFolderView(BrowserView):
             if brain.getURL() == self.context.absolute_url():
                 continue
             # don't add contenttypes that are excluded from navigation
-            if brain.exclude_from_nav:
+            if brain.exclude_from_nav and not include_excluded_objects:
                 continue
 
             obj = brain.getObject()
