@@ -10,7 +10,8 @@
             <metal:entries fill-slot="entries">
         <metal:listingmacro define-macro="listing" tal:define="subfolderView subfolderView|context/@@subfolder_view_logic;
                                                                folderContents folderContents|python:None">
-            <tal:foldercontents tal:define="formattedFolderContents python:subfolderView.folder_contents(size_limit=10, folderContents=folderContents);
+            <tal:foldercontents tal:define="formattedFolderContents python:subfolderView.folder_contents(
+                    folderContents=folderContents, include_excluded_objects=True);
                                             nonFolderishItems formattedFolderContents/nonfolderish; 
                                             FolderishItems formattedFolderContents/folderish;
                                             hideNonFolderishItems context/hideOtherResultsFromAccordionView|python:False">
