@@ -10,9 +10,9 @@
             <metal:entries fill-slot="entries">
         <metal:listingmacro define-macro="listing" tal:define="subfolderView subfolderView|context/@@subfolder_view_logic;
                                                                folderContents folderContents|python:None">
-            <tal:foldercontents tal:define="formattedFolderContents python:subfolderView.folder_contents(size_limit=10, 
-                                            folderContents=folderContents); 
-                                            nonFolderishItems formattedFolderContents/nonfolderish; 
+            <tal:foldercontents tal:define="formattedFolderContents python:subfolderView.folder_contents(
+                                            folderContents=folderContents, include_excluded_objects=True);
+                                            nonFolderishItems formattedFolderContents/nonfolderish;
                                             FolderishItems formattedFolderContents/folderish;">
         
             <ul class="eea-tabs two-rows"></ul>
